llm: remove jlama, make llama.cpp the default everywhere
Collapses the offline LLM to llama.cpp only (Llama-3.2-3B default, Gemma-2-2B alternative) plus the three cloud providers (Claude/OpenAI/DeepSeek), per Aaron's decision. Deletes the jlama provider, its worker child-JVM launcher and worker class, all the jlama Gradle shading and deps, the jlama-only config (LlmModel/LlmWorkerHeapMb/LlmLocalUrl), and the bring-your-own-URL 'local' provider. Default provider flips jlama -> llamacpp so fresh installs and clients match the server. Docs and config comments updated to the new reality.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>